--- a/templates/index.html
+++ b/templates/index.html
@@ -88,7 +88,7 @@
         </nav>
 
         <article>
-            <h1>Schedules</h1>
+            <h1>Dashboard</h1>
             <table class="table table-striped">
                 <thead class="thead-dark">
                     <tr><th>Time</th><th>Topic</th><th>Speaker</th><th>Status</th></tr>
@@ -114,6 +114,12 @@
                     </tr>
                 </tbody>
             </table>
+            <div class="message_holder"></div>
+            <form action="" method="POST">
+                <input type="text" class="username" placeholder="User Name" />
+                <input type="text" class="message" placeholder="Messages" />
+                <input type="submit" />
+            </form>
         </article>
     </section>
 
@@ -125,6 +131,34 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+
+    <!-- socket.io js -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.7.3/socket.io.min.js"></script>
+    <script type="text/JavaScript">
+        var socket = io.connect('http://' + document.domain + ':' + location.port);
+        socket.on('connect', function() {
+            socket.emit('my event', {
+                data: 'User Connected'
+            })
+            var form = $('form').on('submit', function(e) {
+                e.preventDefault()
+                let user_name = $('input.username').val()
+                let user_input = $('input.message').val()
+                socket.emit('my event', {
+                    user_name: user_name,
+                    message: user_input
+                })
+                $('input.message').val('').focus()
+            })
+        })
+        socket.on('my response', function(msg) {
+            console.log(msg)
+            if(typeof msg.user_name !== 'undefined') {
+                $('h3').remove()
+                $('div.message_holder').append('<div><b style="color: #000">'+msg.user_name+'</b> '+msg.message+'</div>')
+            }
+        })
+    </script>
 </body>
 
 </html>
